--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Onn Web Services | Cheapest Hosting on Planet</title>
+  <title>Nikhil Oli | Portfolio</title>
 </head>
 
 <body>
