--- a/pexelsAPI/index.html
+++ b/pexelsAPI/index.html
@@ -1,16 +1,30 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Movie Haven - Explore Popular, Top-rated & Upcoming Movies</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ImageSnap | Search your photo</title>
-</head>
+    <meta name="description" content="Movie Haven is a modern, responsive movie browsing app built with React and TypeScript. Discover popular, top-rated, and upcoming movies with detailed info and a sleek interface." />
 
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-</body>
+    <link rel="icon" type="image/svg+xml" href="/movie-haven-favicon.svg" />
+    <!-- fallback favicon -->
+    <link rel="icon" type="image/png" href="/movie-haven-favicon.png" />
 
+    <!-- Open Graph for social sharing -->
+    <meta property="og:title" content="Movie Haven - Explore Popular, Top-rated & Upcoming Movies" />
+    <meta property="og:description" content="Movie Haven is a modern, responsive movie app that lets you discover and explore detailed info about your favorite movies." />
+    <meta property="og:image" content="/movie-haven-og-image.png" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Movie Haven - Explore Popular, Top-rated & Upcoming Movies" />
+    <meta name="twitter:description" content="Discover popular, top-rated, and upcoming movies with Movie Haven's sleek React app." />
+    <meta name="twitter:image" content="/movie-haven-twitter-image.png" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
