Update metadata and favicon

--- a/pexelsAPI/index.html
+++ b/pexelsAPI/index.html
@@ -3,28 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Movie Haven - Explore Popular, Top-rated & Upcoming Movies</title>
-
-    <meta name="description" content="Movie Haven is a modern, responsive movie browsing app built with React and TypeScript. Discover popular, top-rated, and upcoming movies with detailed info and a sleek interface." />
-
-    <link rel="icon" type="image/svg+xml" href="/movie-haven-favicon.svg" />
-    <!-- fallback favicon -->
-    <link rel="icon" type="image/png" href="/movie-haven-favicon.png" />
-
+    
+    <title>ImageSnap | Search your photo</title>
+    <meta name="description" content="ImageSnap is a web application for powerful image search, manipulation, and sharing, integrated with Pexels API and React." />
+    
+    <!-- Favicon using online Icons8 PNG -->
+    <link rel="icon" type="image/png" href="https://img.icons8.com/?size=100&id=IvdX4scFwC9Y&format=png&color=000000" />
+  
     <!-- Open Graph for social sharing -->
-    <meta property="og:title" content="Movie Haven - Explore Popular, Top-rated & Upcoming Movies" />
-    <meta property="og:description" content="Movie Haven is a modern, responsive movie app that lets you discover and explore detailed info about your favorite movies." />
-    <meta property="og:image" content="/movie-haven-og-image.png" />
+    <meta property="og:title" content="ImageSnap | Search your photo" />
+    <meta property="og:description" content="Search, manipulate, and share images effortlessly with ImageSnap." />
+    <meta property="og:image" content="/imagesnap-og-image.png" />
     <meta property="og:type" content="website" />
-
+  
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Movie Haven - Explore Popular, Top-rated & Upcoming Movies" />
-    <meta name="twitter:description" content="Discover popular, top-rated, and upcoming movies with Movie Haven's sleek React app." />
-    <meta name="twitter:image" content="/movie-haven-twitter-image.png" />
+    <meta name="twitter:title" content="ImageSnap | Search your photo" />
+    <meta name="twitter:description" content="ImageSnap application for quick image search and sharing, powered by React and Pexels API." />
+    <meta name="twitter:image" content="/imagesnap-twitter-image.png" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
